add event report

--- a/client/template/sidebar.html
+++ b/client/template/sidebar.html
@@ -38,15 +38,15 @@
                 <a ui-sref="app.flightTracking"><i class="fas fa-plane"></i>Flight Tracking</a>
             </li>
             <!-- flight tracking menu start -->
-            <!-- <li class="has-sub" ng-class="{active:$state.includes('app.reports')}">
+            <li class="has-sub" ng-class="{active:$state.includes('app.reports')}">
                 <a href="javascript:;">
                     <span class="caret pull-right"></span>
                     <i class="fa fa-file"></i>
                     <span>Reports </span>
                 </a>
-                <ul class="sub-menu"> -->
+                <ul class="sub-menu">
                     <!-- <li ui-sref-active="active"><a ui-sref="app.reports.registration">Registration Logs</a></li> -->
-                    <!-- <li ui-sref-active="active"><a ui-sref="app.reports.events">Events Logs</a></li> -->
+                    <li ui-sref-active="active"><a ui-sref="app.reports.events">Events Logs</a></li>
                     <!-- <li ui-sref-active="active"><a ui-sref="app.reports.tracker">Play Logs</a></li> -->
                     <!-- <li ui-sref-active="active"><a ui-sref="app.reports.ads">Ads Logs</a></li> -->
                     <!--li ui-sref-active="active"><a ui-sref="app.reports.games">Games Logs</a></li>
@@ -61,8 +61,8 @@
                     <li ui-sref-active="active"><a ui-sref="app.reports.monthlyusage">Monthly Usage</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.reports.usagebucket">Usage Bucket</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.reports.serversession">Server Session</a></li> -->
-                <!-- </ul> -->
-            <!-- </li> -->
+                </ul>
+            </li>
             <!-- json menu start -->
             <!-- <li class="has-sub" ng-class="{active:$state.includes('app.json')}">
                 <a href="javascript:;">
