--- a/client/app/vuScreen/views/eventsLogs.html
+++ b/client/app/vuScreen/views/eventsLogs.html
@@ -26,7 +26,7 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
                     <h4 class="panel-title">Vuscreen Event Logs</h4>
-                    <h4 class="panel-title">Unique Hosts-{{clicks.totalhost}} || Count Of Stary Cycle - {{clicks.StartCycle}} || Count Of Stop Cycle - {{clicks.StopCycle}} || Count Of Unique Mac - {{clicks.totaluser}} </h4>
+                    <h4 class="panel-title">Unique Hosts-{{clicks.totalhost}}  </h4>
                 </div>
                 <div class="alert alert-info fade in">
                     <button type="button" class="close" data-dismiss="alert">
@@ -45,16 +45,7 @@
                                 <th>View Date</th>
                                 <th>Event</th>
                                 <th>Journey ID</th>
-                                <th>Reg ID</th>
-                                <th>Device ID</th>
-                                <th>User</th>
-                                <th>Lat</th>
-                                <th>Lng</th>
-                                <th>Model</th>
-                                <th>Play Duration</th>
-                                <th>Sync Type</th>
-                                <th>Interface</th>
-                                <th>Version</th>
+                                
                             </tr>
                         </thead>
                     </table>
