changes ion log reports

--- a/client/app/vuScreen/views/eventsLogs.html
+++ b/client/app/vuScreen/views/eventsLogs.html
@@ -39,8 +39,8 @@
                         <thead>
                             <tr>
                                 <th>Host ID</th>
-                                <th>Source</th>
-                                <th>Destination</th>
+                                <!-- <th>Source</th>
+                                <th>Destination</th> -->
                                 <th>Sync Date</th>
                                 <th>View Date</th>
                                 <th>Event</th>
