change in server

--- a/client/template/sidebar.html
+++ b/client/template/sidebar.html
@@ -59,8 +59,8 @@
                     <li ui-sref-active="active"><a ui-sref="app.reports.topcontent">Top Content</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.reports.topcategory">Top Categories</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.reports.monthlyusage">Monthly Usage</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.reports.usagebucket">Usage Bucket</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.reports.serversession">Server Session</a></li> -->
+                    <li ui-sref-active="active"><a ui-sref="app.reports.usagebucket">Usage Bucket</a></li> -->
+                    <li ui-sref-active="active"><a ui-sref="app.reports.serversession">Server Session</a></li> 
                 </ul>
             </li>
             <!-- json menu start -->
@@ -144,6 +144,8 @@
                 <ul class="sub-menu">
                     <li ui-sref-active="active"><a ui-sref="app.reports.registration">Bus Registration Logs</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.reports.events">Events Logs</a></li>
+                    <!-- <li ui-sref-active="active"><a ui-sref="app.reports.serversession">Server Session</a></li> -->
+
                     <li ui-sref-active="active"><a ui-sref="app.reports.tracker">Play Logs</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.reports.topcontent">Top Content</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.reports.topcategory">Top Categories</a></li>
