--- a/client/app/vuScreen/views/serversession.html
+++ b/client/app/vuScreen/views/serversession.html
@@ -11,7 +11,7 @@
     <!-- end page-header -->
     <div class="row">
         <div class="col-md-12">
-            <div class="panel panel-inverse">
+            <div class="panel panel-inverse"> 
                 <div class="panel-heading">
                     <div class="panel-heading-btn">
                         <span>{{topgenredaterangeSelector}}</span>
@@ -21,7 +21,10 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Server Session</h4>
+                    <h4 class="panel-title">Host ID <input class="searchId" style="color: black;" type="text" ng-model="hostId">
+                        &nbsp;<button style="color: black;" ng-click="downloadFile(serversession)">Download CSV</button> 
+                        &nbsp; Host - {{Host}} &nbsp;  
+                    </h4> 
                 </div>
                 <div class="alert alert-info fade in" style="margin-bottom: 0;">
                     <button type="button" class="close" data-dismiss="alert">
@@ -37,29 +40,29 @@
                     </div>
                     <table class="table table-striped table-bordered">
                       <tr > 
-                        <td class="selected">Sync Date</td>
+                        <td class="selected">View Date</td>
                         <td class="selected">Host ID</td>
                         <td class="selected" >Cycle</td>
                         <td class="selected" >Wifi Login</td>
                         <td class="selected" >Start Date</td>
                         <td class="selected" >Start Time</td>
-                        <td class="selected" >Start Battery</td>
                         <td class="selected" >Stop Date</td>
                         <td class="selected" >Stop Time</td>
+                        <td class="selected" >Start Battery</td>
                         <td class="selected" >stop_battery</td>
-                        <td class="selected" >Duration</td>
+                        <td class="selected" >Duration(M)</td>
                         <td class="selected" >Battery Consumed</td>
                       </tr>  
                       <tr ng-repeat="x in serversession" >
-                        <td>{{ x.sync_date }}</td>
+                        <td>{{ x.view_date }}</td>
                         <td>{{ x.HostID }}</td>
                         <td>{{ x.cycle }}</td>
                         <td>{{ x.wifiLogin }}</td>
                         <td>{{ x.start_date }}</td>
                         <td>{{ x.start_time }}</td>
-                        <td>{{ x.start_battery }}</td>
                         <td>{{ x.stop_date }}</td>
                         <td>{{ x.stop_time }}</td>
+                        <td>{{ x.start_battery }}</td>
                         <td>{{ x.stop_battery }}</td>
                         <td>{{ x.start_stop_duration }}</td>
                         <td>{{ x.battery_consumed }}</td>
